--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
 	"compilerOptions": {
 		"target": "ES5",
 		"lib": ["DOM", "DOM.Iterable", "ESNext"],
+		"allowJs": false,
 		"skipLibCheck": true,
 		"strict": false,
 		"forceConsistentCasingInFileNames": true,
