--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,10 @@
 		"lib": ["DOM", "DOM.Iterable", "ESNext"],
 		"allowJs": false,
 		"skipLibCheck": true,
-		"strict": false,
+		"strict": true,
+		"strictNullChecks": true,
+		"removeComments": true,
+		"noImplicitAny": true,
 		"forceConsistentCasingInFileNames": true,
 		"noEmit": true,
 		"esModuleInterop": true,
