--- a/package.json
+++ b/package.json
@@ -1,23 +1,24 @@
 {
-  "name": "nextjs-blog",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
-  },
-  "dependencies": {
-    "mongoose": "^5.11.12",
-    "next": "10.0.5",
-    "next-connect": "^0.9.1",
-    "react": "17.0.1",
-    "react-dom": "17.0.1"
-  },
-  "license": "MIT",
-  "devDependencies": {
-    "@types/node": "^14.14.21",
-    "@types/react": "^17.0.0",
-    "typescript": "^4.1.3"
-  }
+	"name": "nextjs-blog",
+	"description": "A simple blog app to practice with NextJS",
+	"version": "1.0.0",
+	"private": true,
+	"license": "MIT",
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start"
+	},
+	"dependencies": {
+		"mongoose": "^5.11.12",
+		"next": "10.0.5",
+		"next-connect": "^0.9.1",
+		"react": "17.0.1",
+		"react-dom": "17.0.1"
+	},
+	"devDependencies": {
+		"@types/node": "^14.14.21",
+		"@types/react": "^17.0.0",
+		"typescript": "^4.1.3"
+	}
 }
