--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
 		"next": "10.0.5",
 		"next-connect": "^0.9.1",
 		"react": "17.0.1",
-		"react-dom": "17.0.1"
+		"react-dom": "17.0.1",
+		"remarkable": "^2.0.1"
 	},
 	"devDependencies": {
 		"@types/node": "^14.14.21",
 		"@types/react": "^17.0.0",
+		"@types/remarkable": "^2.0.0",
 		"typescript": "^4.1.3"
 	}
 }
